tests/errors/coalesce-non-carrier/main.pa
def go = fun {
	5 ?? 0
}
